--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ build/astra_analytical/build/
 build/astra_analytical/result/
 
 # Example results file
-examples/results/
-!examples/results/README.md
+experiments/results/
+!experiments/results/README.md
 
 # JetBrains
 .idea/
